# eo

./: .gitignore  eo.hs  g  input  lib.hs  snippets.hs
loopo/: .gitignore  README.md  Sinc.java  fo-loops  funky-one  g  input  loopo.cabal  nonblocking.c  random-loops  read-midi  stack.yaml
loopo/src/: Main.hs  Resample.hs  Util.hs  nonblocking.c
sloopo/: README.md  g  input  sloopo.cabal  stack.yaml
sloopo/src/: Main.hs
