name:                loopo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable loopo
  hs-source-dirs:      src
  main-is:             Main.hs
  --other-modules:       Common
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       portaudio >= 0.2.4,
                       vector,
                       hsndfile,
                       c2hs >= 0.16.3
                       --array,
                       --explicit-exception,
                       --jack,
                       --transformers
