name:                loopo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library pa
  -- ...
  -- The C source files to compile, in that order
  C-sources: src/nonblocking.c
  -- The location of the header files
  --Include-dirs: include
  -- The header files to be included
  --Includes: foobar.h, foobaz.h
  -- Header files to install
  --Install-includes: foobar.h, foobaz.h

executable loopo
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hsndfile >= 0.8.0,
                       hsndfile-storablevector >= 0.5.2,
                       portaudio >= 0.2.4,
                       pretty-simple,
                       storablevector,
                       text,
                       pa
                       --vector,
                       --hsndfile,
                       --c2hs >= 0.16.3
                       --array,
                       --explicit-exception,
                       --jack,
                       --transformers
